--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -33,6 +33,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 
         <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
+
+        <script>
+            var ajaxURL = "{{url_for('get_country')}}"
+        </script>
         {% endblock %}
     </head>
 
