--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -10,7 +10,8 @@
 
         
         <script>
-            var ajaxURL = "{{url_for('get_country')}}"
+            var ajaxURL = "{{ url_for('get_country') }}";
+            console.log(ajaxURL);
         </script>
 
         <!-- Bootstrap CSS CDN -->
