--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block head %}
 {{ super()}}
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="{{ url_for('static, filename='js/visualisation.js')}}"></script>
+<script src="{{ url_for('static', filename='js/visualisation.js')}}"></script>
 {% endblock %}
 {% block content %}
     <!-- Content Area -->
