--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     console.log(ajaxURL);
 </script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="{{ url_for('static', filename='js/visualisation.js')}}"></script>
+<script src="{{ url_for('static', filename='js/custom.js')}}"></script>
 {% endblock %}
 {% block content %}
     <!-- Content Area -->
