--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <div class="jumbotron jumbotron-fluid border border-light bg-transparent">  
             <div class="container-fluid py-5 px-md-5 content-area">
                 <h1 class="display-4 content-title" id="visualisation">PLACEHOLDER FOR VISUALISATION</h1>
-                <svg onload="displayData()"></svg>
+                <svg onload="displayData({{ ajaxURL }})"></svg>
             </div>
         </div>                
     </div>
