--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,9 @@
 {{ super()}}      
 <script>
     var ajaxURL = "{{ url_for('get_country')}}";
-    console.log(ajaxURL);
 </script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="{{ url_for('static', filename='js/custom.js')}}"></script>
+<script src="{{ url_for('static', filename='js/visualisation.js')}}"></script>
 {% endblock %}
 {% block content %}
     <!-- Content Area -->
@@ -21,7 +20,7 @@
         <div class="jumbotron jumbotron-fluid border border-light bg-transparent">  
             <div class="container-fluid py-5 px-md-5 content-area">
                 <h1 class="display-4 content-title" id="visualisation">PLACEHOLDER FOR VISUALISATION</h1>
-                <svg onload="displayData({{ ajaxURL }})"></svg>
+                <svg onload="displayData(ajaxURL)"></svg>
             </div>
         </div>                
     </div>
