--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="jumbotron jumbotron-fluid border border-light bg-transparent">  
             <div class="container-fluid py-5 px-md-5 content-area">
-                <h1 class="display-4 content-title" id="visualisation">PLACEHOLDER FOR VISUALISATION</h1>
-                <svg width="800" height="500" onload="displayData(ajaxURL)"></svg>
+                <h1 class="display-4 content-title">PLACEHOLDER FOR VISUALISATION</h1>
+                <svg id="visualisation" onload="displayData(ajaxURL)"></svg>
             </div>
         </div>                
     </div>
