--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,10 @@
         <div class="jumbotron jumbotron-fluid border border-light bg-transparent">  
             <div class="container-fluid py-5 px-md-5 content-area">
                 <h1 class="display-4 content-title">PLACEHOLDER FOR VISUALISATION</h1>
+                <button onclick="displayData(ajaxURL)">CLICK ME</button>
                 <svg id="test" width="1000" height="300"></svg>
             </div>
-            <button onclick="displayData(ajaxURL)"></button>
+            
         </div>                
     </div>
 {% endblock %}
